<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:layout_marginStart="6dp"
    android:layout_marginTop="1dp"
    android:layout_marginEnd="-6dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/welcome_info"
            android:textColor="@color/orange_700"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/welcome_info2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/tLogin"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="36dp"
            android:textColor="@color/black_700"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="25dp"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/tSenha"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginBottom="100dp"
            android:contextClickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="14dp"
            android:background="@drawable/large_button"
            android:text="@string/button"
            android:textColor="@color/black_500"
            android:textStyle="bold"
            app:iconTint="@color/orange_700" />

        <TextView
            android:id="@+id/tvCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cadastro"
            android:textStyle="bold" />

    </LinearLayout>